// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag snapshot color gray 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-gray-200 text-gray-700 gap-1 text-2xs px-2 py-0.5 antialiased"
/>
`;

exports[`Tag snapshot color red 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-red-100 text-red-600 gap-1 text-2xs px-2 py-0.5 antialiased"
/>
`;

exports[`Tag snapshot plain 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-gray-200 text-gray-700 gap-1 text-2xs px-2 py-0.5 antialiased"
>
  plain
</span>
`;

exports[`Tag snapshot size md 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-gray-200 text-gray-700 gap-2 text-sm px-3 py-2"
/>
`;

exports[`Tag snapshot size sm [default] 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-gray-200 text-gray-700 gap-2 text-xs px-3 py-1"
/>
`;

exports[`Tag snapshot size xs 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-gray-200 text-gray-700 gap-1 text-2xs px-2 py-0.5 antialiased"
/>
`;

exports[`Tag snapshot with children 1`] = `
<span
  class="inline-flex flex-row items-center mr-2 last:mr-0 rounded-full uppercase font-bold bg-gray-200 text-gray-700 gap-1 text-2xs px-2 py-0.5 antialiased"
>
  with children
</span>
`;
